removed client id from code and puttet it in the .env that is now gitignored. updated dependencies for dotenv and changed projectname

--- a/notebooks/eda_weather.ipynb
+++ b/notebooks/eda_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "57fb3429",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd \n",
     "import requests\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "f9124940",
    "metadata": {},
    "outputs": [
@@ -28,8 +29,6 @@
     }
    ],
    "source": [
-    "CLIENT_ID = \"ceac365a-b813-450d-af8e-34137f7874df\"\n",
-    "url = \"https://frost.met.no/sources/v0.jsonld\"\n",
     "params = {\n",
     "    \"types\": \"SensorSystem\",\n",
     "    \"name\": \"Gardermoen\",\n",
@@ -43,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "c82bb0e2",
    "metadata": {},
    "outputs": [
@@ -71,10 +70,6 @@
     }
    ],
    "source": [
-    "\n",
-    "client_id = \"ceac365a-b813-450d-af8e-34137f7874df\"  # Frost client-id (brukernavn i Basic Auth)\n",
-    "url = \"https://frost.met.no/observations/v0.jsonld\"\n",
-    "\n",
     "params = {\n",
     "    \"sources\": \"SN4780\",               # Gardermoen         \n",
     "    \"elements\": \"air_temperature,wind_speed\",      # velg noen elementer\n",
@@ -82,7 +77,7 @@
     "    \"timeresolutions\": \"PT1H\"                      # timeverdier (valgfritt)\n",
     "}\n",
     "\n",
-    "r = requests.get(url, params=params, auth=(client_id, \"\"), timeout=30)\n",
+    "r = requests.get(url, params=params, auth=(CLIENT_ID, \"\"), timeout=30)\n",
     "\n",
     "print(\"Status:\", r.status_code)\n",
     "print(\"URL:\", r.url)\n",
@@ -242,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "e1932f84",
    "metadata": {},
    "outputs": [
@@ -267,10 +262,6 @@
     }
    ],
    "source": [
-    "import requests\n",
-    "\n",
-    "CLIENT_ID = \"ceac365a-b813-450d-af8e-34137f7874df\" \n",
-    "url = \"https://frost.met.no/observations/v0.jsonld\"\n",
     "params = {\n",
     "    \"sources\": \"SN4780\",\n",
     "    \"elements\": \"air_temperature\",\n",
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "043201dc",
    "metadata": {},
    "outputs": [
@@ -320,10 +311,6 @@
     }
    ],
    "source": [
-    "\n",
-    "CLIENT_ID = \"ceac365a-b813-450d-af8e-34137f7874df\"\n",
-    "url = \"https://frost.met.no/observations/v0.jsonld\"\n",
-    "\n",
     "params = {\n",
     "    \"sources\": \"SN4780\",  \n",
     "    \"elements\": \"air_temperature,wind_speed,wind_from_direction,precipitation_amount\",\n",
