adding titles for the weather eda and a small conclusion at the end of the notebook

--- a/notebooks/eda_weather.ipynb
+++ b/notebooks/eda_weather.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1093254f",
+   "metadata": {},
+   "source": [
+    "# EDA on weather data and testing API-Call"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f8bd422",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "57fb3429",
@@ -12,6 +28,27 @@
     "import matplotlib.pyplot as plt\n",
     "from dotenv import load_dotenv\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52f03fd0",
+   "metadata": {},
+   "source": [
+    "### Loading API-Keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e835aff0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "\n",
+    "CLIENT_ID = os.getenv(\"CLIENT_ID\")\n",
+    "url = \"https://frost.met.no/sources/v0.jsonld\""
    ]
   },
   {
@@ -33,11 +70,22 @@
     "    \"types\": \"SensorSystem\",\n",
     "    \"name\": \"Gardermoen\",\n",
     "}\n",
+    "\n",
     "r = requests.get(url, params=params, auth=(CLIENT_ID, \"\"))\n",
     "r.raise_for_status()\n",
     "data = r.json()\n",
     "for src in data.get(\"data\", []):\n",
     "    print(src.get(\"id\"), src.get(\"name\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "129e7f70",
+   "metadata": {},
+   "source": [
+    "### Testing the API-Call\n",
+    "How do we get the information we need?  \n",
+    "How much information is available?  "
    ]
   },
   {
@@ -89,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "b3563ff0",
    "metadata": {},
    "outputs": [
@@ -345,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "a17a237c",
    "metadata": {},
    "outputs": [
@@ -375,8 +423,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec4a1890",
+   "metadata": {},
+   "source": [
+    "### Plotting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "9bec07ff",
    "metadata": {},
    "outputs": [
@@ -444,6 +500,14 @@
     "else:\n",
     "    print(\"Ingen nedbørsdata (mangler 'precip_mm' / 'precipitation_amount').\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11de9e89",
+   "metadata": {},
+   "source": [
+    "The weather data contains the wind force, wind direction and temperature which would be great as features for out model. However, we are having troubles with the API-call and cannot get for weather for every group. We are also having problems with getting future weather data.  "
    ]
   }
  ],
